Correct .row-big-left on small screens

--- a/lmisite/main_site/static/main_site/style/style.scss
+++ b/lmisite/main_site/static/main_site/style/style.scss
@@ -80,7 +80,7 @@ img {
 
 
     @media (max-width: $media-small) {
-      flex-basis: 100%;
+      flex-basis: 100% !important;
     }
   }
 
@@ -96,6 +96,9 @@ img {
   &.row-big-left {
     .left {
       flex-grow: 3;
+      @media (max-width: $media-small) {
+        order: 2;
+      }
     }
 
     .right {
